tests/mod_binding_poly_func_type.test
let f = fun[T] x: T :: T -> x;

mod M = f;
####
TypeError: Type of module binding here must be a record type.
let f = fun[T] x: T :: T -> x;
mod M = f;
    ^      
but it may be a function type here:
let f = fun[T] x: T :: T -> x;
        ^~~~~~~~~~~~~~~~~~~~~  
mod M = f;
